--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,5 +1,9 @@
 {
+  "login_page": "Login Page",
   "enter_user_id": "Enter user id",
   "login": "login",
-  "or_register": "Or register"
+  "or_register": "Or register",
+  "select_language": "Select language",
+  "cancel": "Cancel",
+  "home_page": "Home Page"
 }
