contractors is added

--- a/assets/langs/az.json
+++ b/assets/langs/az.json
@@ -5,5 +5,7 @@
   "or_register": "Və yaxud qeydiyyatdan keç",
   "select_language": "Dili seçin",
   "cancel": "Ləğv et",
-  "home_page": "Ana Səhifə"
+  "home_page": "Ana Səhifə",
+  "azerbaijani": "Azərbaycan dili",
+  "english": "Ingilis dili"
 }
