--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -5,5 +5,7 @@
   "or_register": "Or register",
   "select_language": "Select language",
   "cancel": "Cancel",
-  "home_page": "Home Page"
+  "home_page": "Home Page",
+  "azerbaijani": "Azerbaijani",
+  "english": "English"
 }
