--- a/assets/langs/az.json
+++ b/assets/langs/az.json
@@ -1,4 +1,5 @@
 {
+  "template_app": "Nümunə tətbiq",
   "login_page": "Login səhifəsi",
   "enter_user_id": "istifadəçi id-si",
   "login": "daxil ol",
@@ -7,5 +8,10 @@
   "cancel": "Ləğv et",
   "home_page": "Ana Səhifə",
   "azerbaijani": "Azərbaycan dili",
-  "english": "Ingilis dili"
+  "english": "Ingilis dili",
+  "russian": "Rus dili",
+  "enable_dark_mode": "Tünd temanı aktivləşdir",
+  "change_language": "Dili dəyişdir",
+  "about": "Haqqında",
+  "log_out": "Tətbiqdən çıx"
 }
